--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name intervolz.com www.intervolz.com;
+
+    ssl_certificate /path/to/intervolz.com/fullchain.pem;
+    ssl_certificate_key /path/to/intervolz.com/privkey.pem;
 
     location / {
         root /usr/share/nginx/html;
