localhost works; internet SSL is broken

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,6 @@
 server {
-    listen 443 ssl;
+    listen 80;
     server_name intervolz.com www.intervolz.com;
-
-    ssl_certificate /path/to/intervolz.com/fullchain.pem;
-    ssl_certificate_key /path/to/intervolz.com/privkey.pem;
 
     location / {
         root /usr/share/nginx/html;
