--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "handlebars": "^4.7.8",
+    "highlight.js": "^11.9.0",
     "nodemon": "^3.0.2"
   }
 }
