--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^8.2.2",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.9.0",
+    "markdown-it-anchor": "^8.6.7",
     "nodemon": "^3.0.2"
   }
 }
